# otus-cpp

./: .gitmodules  .travis.yml  README.md
lab1-hello_world/: .travis.yml  CMakeLists.txt  README.md  main.cpp
lab1-hello_world/test/: CMakeLists.txt  gtest.cpp  test_version.cpp
lab2-ip_filter/: CMakeLists.txt  a.out  lib.cpp  lib.h  main.cpp
lab2-ip_filter/test/: CMakeLists.txt  test-parse.cpp
lab3-allocator/: CMakeLists.txt  SimpleTimer.cpp  SimpleTimer.h  allocator.h  list.cpp  list.h  main.cpp  simple_allocator.h  smart_allocator.h  smart_allocator_node.h  test.cpp  test.h
lab3-allocator/test/: CMakeLists.txt  test-alloc.cpp
lab4-print_ip/: CMakeLists.txt  Doxyfile  main.cpp  print_ip.h  test.cpp
timus/: 1000.cpp  1001.cpp  1001.txt  1264.cpp  1293  1293.cpp  1409.cpp  1785.cpp  1787.cpp  1877.cpp  2001.cpp  2012.cpp  a.out
